ecmascript/parser/tests/test262-error-references/fail/647e21f8f157c338.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/647e21f8f157c338.js:1:4
  |
1 | (' ')
  |    ^^

